--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,20 @@
             <artifactId>cassandra-driver-mapping</artifactId>
             <version>${cassandra.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.8.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
